Added Redis and Authorization to the app
