# go_social/cmd/api/auth.go
@@ -52,6 +52,9 @@ func (app *application) registerUserHandler(w http.ResponseWriter, req *http.Req
 	user := &store.User{
 		Username: payload.Username,
 		Email:    payload.Email,
+		Role: store.Role{
+			Name: "user",
+		},
 	}
 
 	// hash the password
